# openleadr-rs

./: .dockerignore  .env  .gitignore  CODE_OF_CONDUCT.md  COPYRIGHT  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  SECURITY.md  deny.toml  docker-compose.yml  generated-openapi.yaml  mqtt-topics.txt  user-management.yaml  vtn.Dockerfile
.github/workflows/: checks.yml  docker.yml  docs.yml
.sqlx/: query-00972391e6cd4f9e8741d4c71097db990e2db4fa1e049a0702e87556145a6c71.json  query-017d677fa8c669e19f35eb7aafeedd9c637e9d4a4050a006cf6833ed880da967.json  query-0527b6445e9cdfd63ce13214279d5909dbc3a6b694003a64be612c0824d7cd0f.json  query-05a7f9253e3ef5cbbc53ce27bdb068ac7d5c425410cd33587345fd0298535577.json  query-05b88463dc1b3683d0aa0f282e3beb176d3966c382377de418235cb7304e3a70.json  query-06c98530f91c7c64467a773b9f66cccee5448ce6a7058b155a2c469d458bf5c2.json  query-0b04e5e6fd9a8a0126bfdb0cec961082108efd1eecc8df693866ba4e4f6477e6.json  query-0bf9451637ddd33f309ec898c205f8f0922c6de64b6248057ccd5d6e6d9cdd07.json  query-0e6e36ced8bac5dacff1d0f649835764c39638afe68e79e7e5958cb1295e4a8f.json  query-0e6ff7995b5e279abc600120d4e6fccefda7bb84f7727308268bb7e0218ea002.json  query-136470e1997cc6738acdaa3dbb4abefd83fea7de2138acb36350ec43d17861cb.json  query-13c3c1b488e0e58fef68df99fed2baff4728ff60f5857f48b20fbfccd9208ec4.json  query-13ddc6100825f4585b6c1851d10c47cd77f9ad3c01505bdc36a6fca25e1a2a12.json  query-1555b91b7675330f86865a13907f317c663b1319f979541b68d8c94c075e1084.json  query-19c7606375908c6f9c6ff891d29f3c9110c77a04041e4eced6d98fe394d11ca4.json  query-1a05584efa5c402737772f3ef055bcb26f380ee0dee13ec9e6e2fdf09293a85c.json  query-1a40b964c1db8d6d28ed95f370f01a81c2c9e11c1c6b874244f4829e29f72498.json  query-1ac68dc9329acb4c0f0c60cf27cfc0778132ae4f00bb4ee8a45e3c871cddafc3.json  query-1b9cf8754d2b1560883bf35bfd9811bc4286026b801c10e4b616f28d271f12cd.json  query-1e4dd74f603ad34fe7a3dd7bbc90fd506264502e76632dfd7c156708e4f2ded6.json  query-251fb8e67fc43a107167e3b643ec293abc039a856ac900fcb02ce5d68c24649c.json  query-25dc4da7b363875dadbd7528f00eaedd2c40af32815c5eb741f8e6079d6f3fb6.json  query-26c68e39c6509e3ba3049ca92d0047d90376d21427541c01fca1ad62d1785153.json  query-27cb81f2ab40f8c739e98aa6a24edcf924ecd11ec0b695cd7f46ed782c087ba4.json  query-2859f2af6ea484a7fbde9a423f987b5a276a2df80ddecd2295ba3d4301d38984.json  query-2891bca9667e03e34278f5258b3c9b620a7a4030eb8a92bba1dc104d5fc48129.json  query-289c76c48409acbf97d58349825ee4e4dca0093bb01e84ee66a6b4a0778ddc15.json  query-2a3a35a8d5a3f985b7f14e3d8d60f7f36aab167b89d9aed42fc9665ddf8a5c66.json  query-2abd61e52695546eee81ca07571f21689a18f5313cf26574c18f3469bd6765f9.json  query-2abdbe551a4b5c543ae750eb133caa10773aa79eb5c4e97674ef19b47e096ee0.json  query-2c6154201f61e405f9e8d0a4482c9a25b73cd3936ea06a1aee2e09d135bf836d.json  query-2cacc5079dd06faa30c98962c7dd9361a38d4b755b5f0302c0845e3c60713446.json  query-2defef04cd0c79915bfcbe224336bf3a98ca281060abaa7944c8b02a70bd5815.json  query-2f9ad16e1c778cac110023c6f371e1a63a636a2acbb8d8c4a85c81723e7595ef.json  query-30fff93166f77a640e5072b40b04002ce3b41a6d8de5159eac106882d1365e88.json  query-314a2248de46e996599a34b0bbc813afb46def2db80f9218a05c53a45a2b5b41.json  query-31879c44d0f401828c8696584ced1c22add151ad9c40777670eb4595912ba3bf.json  query-323633f85b0e08517863708611ef77c0ad824f2529f39cc0dfc999721e3d0b59.json  query-32fe0c7a5475a732f3927ff9ca0f9dcba59f1a498908d5f86e7c79816ecabac7.json  query-34338592bed348f227d746e58a8a5df7eb827fac7605fafb329c79587bde231a.json  (+184 more)
.zed/: settings.json
cli/: Cargo.toml
cli/src/: main.rs
fixtures/: events-ven-targets.sql  events.sql  openadr_testsuite_user.sql  programs.sql  reports.sql  resource_groups.sql  resources.sql  subscriptions.sql  test_user_credentials.sql  users.sql  vens.sql
integration-tests/: Cargo.toml
integration-tests/tests/: mdns_integration_test.rs
migrations/: 20240826084440_initial_scheme.sql  20251107085855_openadr_3.1.sql  20260208000000_report_add_ven_id.sql  20260213100612_openadr_3.1.sql  20260218122421_add_subscriptions.sql  20260408082754_resource_groups.sql  20260506070840_subscriptions_client_id.sql  20260511151401_Create_a_view_for_recursive_resource_group_family.sql
openadr-client/: Cargo.toml
openadr-client/src/: error.rs  event.rs  lib.rs  program.rs  resource.rs  ven.rs
openadr-client/tests/: basic-read.rs  event.rs  program.rs  resources.rs  ven.rs
openadr-client/tests/common/: mod.rs
openadr-vtn/: Cargo.toml
openadr-vtn/src/: error.rs  jwt.rs  lib.rs  main.rs  state.rs
openadr-vtn/src/api/: event.rs  mod.rs  program.rs  report.rs  resource.rs  ven.rs
openadr-vtn/src/data_source/: mod.rs
openadr-vtn/src/data_source/postgres/: event.rs  mod.rs  program.rs  report.rs  resource.rs  user.rs  ven.rs
openadr-wire/src/: event.rs  interval.rs  report.rs  resource.rs  ven.rs
openleadr-client/: Cargo.toml  README.md
openleadr-client/examples/: discover.rs  discover_vtns.rs
openleadr-client/src/: error.rs  event.rs  everest.rs  lib.rs  mdns.rs  program.rs  report.rs  resource.rs  target.rs  timeline.rs  ven.rs
openleadr-client/tests/: basic-read.rs  event.rs  program.rs  resources.rs  ven.rs
openleadr-client/tests/common/: mod.rs
openleadr-vtn/: Cargo.toml  README.md
openleadr-vtn/src/: error.rs  jwt.rs  lib.rs  main.rs  mdns.rs  state.rs
openleadr-vtn/src/api/: auth.rs  event.rs  mod.rs  program.rs  report.rs  resource.rs  resource_group.rs  subscription.rs  user.rs  ven.rs
openleadr-vtn/src/data_source/: mod.rs
openleadr-vtn/src/data_source/postgres/: event.rs  mod.rs  program.rs  report.rs  resource.rs  resource_group.rs  subscription.rs  user.rs  ven.rs
openleadr-vtn/tests/: mdns_integration_test.rs
openleadr-vtn/tests/assets/: public-rsa.pem
openleadr-wire/: Cargo.toml
openleadr-wire/src/: event.rs  interval.rs  lib.rs  oauth.rs  problem.rs  program.rs  report.rs  resource.rs  resource_group.rs  subscription.rs  target.rs  values_map.rs  ven.rs
tests/: schema.yaml
