[workspace]
members = [
    "openleadr-vtn",
    "openleadr-client",
    "openleadr-wire"
]
exclude = []

resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2021"
rust-version = "1.90" # MSRV
license = "Apache-2.0 OR MIT"
repository = "https://github.com/OpenLEADR/openleadr-rs"
homepage = "https://github.com/OpenLEADR/openleadr-rs"
publish = true
description = "An OpenADR 3.0 VTN/VEN implementation"
keywords = ["energy", "openadr", "lf-energy"]

[workspace.dependencies]
openleadr-wire = { version = "0.1.3", path = "openleadr-wire" }
openleadr-vtn = { version = "0.1.3", path = "openleadr-vtn" }
openleadr-client = { version = "0.1.3", path = "openleadr-client" }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = { version = "3.17.0", features = ["macros"] }

reqwest = { version = "0.13.2", default-features = false, features = ["http2", "charset", "json", "rustls", "form", "query"] }
tokio = { version = "1.50.0", features = ["full", "test-util"] }
tokio-test = "0.4.5"
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["query", "typed-header"] }
tower = { version = "0.5.3", features = ["util"] }

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-test = "0.2.6"

chrono = "0.4.44"
iso8601-duration = { version = "0.2.0", features = ["chrono"] }
rangemap = "1.7.1"

thiserror = "2.0.18"
validator = { version = "0.20.0", features = ["derive"] }
uuid = { version = "1.22.0", features = ["v4"] }
url = "2.5.8"
http = "1.4.0"
mime = "0.3.17"
tower-http = { version = "0.6.8", features = ["trace"] }
http-body-util = "0.1.3"
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["use_pem", "aws_lc_rs"] }
base64 = "0.22.1"
rand = "0.10.0"
async-trait = "0.1.89"

quickcheck = "1.1.0"

sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "chrono", "migrate", "macros", "json", "tls-rustls"], default-features = false }
argon2 = "0.5.3"
dotenvy = "0.15.7"

serial_test = "3.4.0"

iso_currency = { version = "0.5.3", features = ["with-serde"] }
