[package]
name = "openleadr-client"
description = "OpenADR 3.1 client"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true
keywords.workspace = true

[dependencies]
openleadr-wire.workspace = true

serde.workspace = true
serde_json.workspace = true

reqwest.workspace = true
axum.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
http-body-util.workspace = true
tower.workspace = true

url.workspace = true
chrono.workspace = true
rangemap.workspace = true
uuid.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
openleadr-vtn.workspace = true
tokio-test.workspace = true
sqlx.workspace = true
serial_test.workspace = true
dotenvy.workspace = true
tracing-subscriber.workspace = true

[package.metadata.cargo-udeps.ignore]
# tokio-test is only used in the doc-tests and can therefore not be detected by cargo-udeps
development = ["tokio-test"]
