[package]
name = "openleadr-wire"
description = "Encode and decode OpenADR 3.0 messages that go over the wire"
readme = "../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true
keywords.workspace = true

[dependencies]
serde.workspace = true
chrono.workspace = true
serde_with.workspace  = true
iso8601-duration.workspace = true
thiserror.workspace = true
http.workspace = true
validator.workspace = true
iso_currency.workspace = true
derive_more.workspace = true
sqlx.workspace = true

[dev-dependencies]
serde_json.workspace = true
quickcheck.workspace = true
